fix align header

--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,7 @@ body {
 	border-bottom: 1px solid #DDD;
 }
 .header-logo {
-	flex-basis: 20%;
+	flex-basis: 25%;
 	/*flex-grow: 1;*/
 }
 
@@ -89,7 +89,7 @@ body {
 	display: flex;
 	direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-end;
 }
 
 .header-nav ul li {
